# connectx7-mcp-plugin

./: .gitignore  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
mcp-server/: pyproject.toml
mcp-server/src/connectx7_mcp/: __init__.py  server.py
mcp-server/tests/: test_server.py
skills/connectx7-development/: SKILL.md
skills/connectx7-mlx5-driver/: SKILL.md
skills/connectx7-performance/: SKILL.md
skills/connectx7-rdma-programming/: SKILL.md
skills/connectx7-troubleshooting/: SKILL.md
skills/connectx7-vma/: SKILL.md
