[project]
name = "connectx7-mcp"
version = "1.0.0"
description = "MCP server for NVIDIA ConnectX-7/DOCA/VMA documentation"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.13.0",
]

[project.scripts]
connectx7-mcp = "connectx7_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/connectx7_mcp"]
